# FreeCLI

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
.github/: copilot-instructions.md
docs/: architecture.md  roadmap.md
src/: Makefile.am
src/backend/: backend.c
src/core/: backend_worker.c  backend_worker.h  chat.c  chat.h  ipc.c  ipc.h  net.h  provider.c  provider.h  provider_registry.h  utf8.c  utf8.h
src/providers/: registry.c
src/providers/anthropic/: anthropic_models.c  provider_anthropic.c
src/providers/google/: google_models.c  provider_google.c
src/providers/ibm/: ibm_models.c  provider_ibm.c
src/providers/xai/: provider_xai.c  xai_models.c
src/ui/: commands.c  commands.h  input.c  input.h  main.c  overlay.c  overlay.h  persist.c  persist.h  session.c  session.h
src/workers/: fs_worker.c  fs_worker.h
tests/: .gitignore  Makefile.am  test_utf8.c
